# EasyFFmpeg

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/stomhong/easyffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: decode_audio.c  decode_audio2.c  decode_video.c  decode_video2.c  decoder.c  encode_audio.c  encoder.c  simplest_ffmpeg_streamer.c  streamer.c
app/src/main/java/com/stomhong/easyffmpeg/: AudioActivity.java  AudioAudioTrackActivity.java  AudioOpenSLActivity.java  MainActivity.java  MediaPlayerActivity.java  Player2Activity.java  PlayerActivity.java  PlayerCore.java  RecordActivity.java  StreamActivity.java  VideoANativeWindowActivity.java  VideoOpenGLActivity.java
app/src/main/java/com/stomhong/easyffmpeg/opengl/: GLFrameRender.java  GLView.java  MyRenderer.java
app/src/main/res/layout/: activity_audio.xml  activity_audio2.xml  activity_main.xml  activity_media_player.xml  activity_player.xml  activity_player2.xml  activity_record.xml  activity_stream.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/stomhong/easyffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
